<resources>
    <string name="app_name">ViewBinding</string>>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">My Dashboard</string>
    <string name="chat">Chat</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="phoneInfo">О телефоне</string>
    <string name="phone">Phone</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="screen">Экран</string>
    <string name="wallpaper">Обои</string>
    <string name="battery">Батарея</string>
    <string name="applications">Приложения</string>
    <string name="back">Назад</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
</resources>