<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.SettingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wi_fi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applications"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>
    <TextView
        android:id="@+id/backSettingBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/background_round"/>

</LinearLayout>